--- a/css/style.css
+++ b/css/style.css
@@ -396,8 +396,8 @@ h6 {
   display: grid;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-grid-columns: (334px)[3];
-  grid-template-columns: repeat(3, 334px);
+  -ms-grid-columns: (167px)[6];
+  grid-template-columns: repeat(6, 167px);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -407,6 +407,8 @@ h6 {
 }
 
 .main__part {
+  -ms-grid-column-span: 2;
+  grid-column: span 2;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: subgrid;
@@ -624,8 +626,8 @@ h6 {
 
 @media (max-width: 62.5em) {
   .main__parts {
-    -ms-grid-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1.25rem;
   }
 
@@ -642,6 +644,9 @@ h6 {
 
   .main__part_03 {
     margin-left: 0;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2/4;
   }
 }
 
@@ -759,13 +764,19 @@ h6 {
   }
 
   .main__parts {
-    -ms-grid-columns: 1fr;
-    grid-template-columns: 1fr;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
   }
 
   .main__part {
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .main__part_03 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
   }
 }
 
