--- a/css/style.css
+++ b/css/style.css
@@ -490,9 +490,9 @@ h6 {
 }
 
 .part__cost {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   position: relative;
   padding-bottom: 0.9375rem;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
@@ -573,9 +573,14 @@ h6 {
 }
 
 .cost-part__number {
+  min-width: 4.375rem;
   font-size: 2.375rem;
   font-weight: 800;
   color: rgb(255, 255, 255);
+}
+
+.cost-part__number_two {
+  min-width: 3.125rem;
 }
 
 .cost-part__date {
